--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -91,8 +91,10 @@ th {
     text-align: left;
 }
 
-th {
+th,thead {
     color: @textColorGray;
     .font-size-default;
     .bold;
+    background: @white2;
 }
+
