--- a/public/assets/css/base/_b-colors.less
+++ b/public/assets/css/base/_b-colors.less
@@ -31,4 +31,6 @@
 // Light gray (lightened of @divederColor) use in alternating rows of tables
 @evenRowColor: lighten(@dividerColor, 20%);
 
-
+@white2: #fafafa;
+@white3: #eeeeee;
+@superLightPrimary: #F1F8E9;
