--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -16,10 +16,10 @@
 /* Gecko Card (List) */
 
 .gecko-card {
-     .card;
-    margin: 20px auto;
     line-height: 14px;
-    padding: 0;
+    background: white;
+    padding-top: 15px;
+    border-bottom: 1px solid @dividerColor;
 }
 
 .gecko-card tr {
@@ -32,12 +32,14 @@
 
 /* Search box on Gecko List */
 .search-box {
-    .col-1-4;
-    .material-shadow--light;
+
+
+margin-left: 15px;
+    margin-right: 30px;
     background: white;
-    margin: 10px;
+    width: 50%;
     padding: 5px;
-    width: unset;
+   // width: unset;
 }
 
 /* Gecko Detail */
@@ -46,7 +48,10 @@
     padding: 10px;
 
 }
-
+.add-gecko-button {
+    position: absolute;
+    right: 5px;
+}
 .gecko-detail-card .table-header {
     width: 75px;
     color: @textColorGray;
