Modified layout of gecko detail.

--- a/public/assets/css/base/_b-modals.less
+++ b/public/assets/css/base/_b-modals.less
@@ -12,6 +12,7 @@ overflow-y: scroll;
 
 }
 
+
 .black-out{
     width: 100%;
     height: 100%;
@@ -19,4 +20,8 @@ overflow-y: scroll;
     position: fixed;
     top: 0;
     left: 0;
+}
+
+.modal:before {
+    .black-out;
 }
