--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -44,8 +44,8 @@ margin-left: 15px;
 
 /* Gecko Detail */
 .gecko-detail-card {
-    .card;
     padding: 10px;
+    background: white;
 
 }
 .add-gecko-button {
@@ -53,7 +53,7 @@ margin-left: 15px;
     right: 5px;
 }
 .gecko-detail-card .table-header {
-    width: 75px;
+    //width: 75px;
     color: @textColorGray;
 }
 
