--- a/public/assets/css/modules/_metrics.less
+++ b/public/assets/css/modules/_metrics.less
@@ -1,7 +1,8 @@
 .gecko-metrics {
 	@metrics-total-color: ;
 	@metrics-male-color: #6c78ab;
-
+    background: white;
+    border-bottom: 1px solid @dividerColor;
 	display: flex;
 	justify-content: center;
 	padding: 15px;
