--- a/public/components/EventsTable/EventsTableTemplate.htm
+++ b/public/components/EventsTable/EventsTableTemplate.htm
@@ -1,4 +1,4 @@
-<div class='events-table material-card'>
+<div class='events-table col-1-2'>
 	<div class='title'>Events</div>
 
 	<div class='filter'>
