--- a/public/components/GeckoDetail/GeckoDetailTemplate.htm
+++ b/public/components/GeckoDetail/GeckoDetailTemplate.htm
@@ -1,7 +1,6 @@
 <!-- CONTAINER FOR GECKO DETAILED INFORMATION -->
 <!-- TODO[x]: Change gecko detail to look more like add new gecko form with labels above entry -->
-<div class='gecko-detail'>
-    <div class="gecko-detail-card">
+<div class='gecko-detail gecko-detail-card'>
         <form name="edit" id="editform">
             <div class='table-top grid'>
                 <div class="title col-2-3">
@@ -177,4 +176,4 @@
                 </tr>
             </table>
         </div>
-    </div>
+
