--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -5,7 +5,7 @@
             <i class="material-icons">search</i>
              <input type="text" class="search-box inline" placeholder="Search List of Geckos" ng-model="searchTerm">
                         <a href="" ng-click="showForm = !showForm" class="add-gecko-button">
-             <i class="material-icons">add_circle_outline</i>
+             <i class="material-icons" title="add new gecko">add_circle_outline</i>
             </a>
         </div>
         <thead>
