--- a/public/views/DashboardView/DashboardViewTemplate.htm
+++ b/public/views/DashboardView/DashboardViewTemplate.htm
@@ -8,11 +8,13 @@
     </div>
     <div class="flex-container">
         <div class="side-bar">
-<gecko-metrics></gecko-metrics>
             <div class="notifications">This is where notifications will be</div>
         </div>
-  <add-gecko-form></add-gecko-form>
-<gecko-table></gecko-table>
+        <div class="dashboard-main-container">
+            <gecko-metrics></gecko-metrics>
+            <add-gecko-form></add-gecko-form>
+            <gecko-table></gecko-table>
         </div>
-<!--<egg-table></egg-table> -->
+    </div>
+    <!--<egg-table></egg-table> -->
 </div>
