--- a/public/assets/css/base/_b-modals.less
+++ b/public/assets/css/base/_b-modals.less
@@ -3,7 +3,7 @@
   position: fixed;
   width: 50%;
 height: 75%;
-  top: 400px;
+  top: 420px;
   left: 50%;
   margin: -25% 0 0 -25%;
 overflow-y: scroll;
@@ -20,6 +20,7 @@ overflow-y: scroll;
     position: fixed;
     top: 0;
     left: 0;
+    z-index: 8;
 }
 
 .modal:before {
