--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -3,9 +3,12 @@
     <div class='status-bar'>
         <a href="/"><i class="material-icons">home</i>GO BACK</a>
     </div>
+
+    <gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
     <div class="detail-main-container">
-        <gecko-detail gecko-id="geckoDetail._id"></gecko-detail>
-        <events-table gecko-id="geckoDetail._id"></events-table>
+        <div class="flex-events">
+            <events-table gecko-id="geckoDetail._id"></events-table>
+        </div>
         <div class="graphs">Graphs will be here</div>
     </div>
 </div>
