Fixed positioning of Add Gecko FAB.

--- a/public/components/GeckoTable/GeckoTableTemplate.htm
+++ b/public/components/GeckoTable/GeckoTableTemplate.htm
@@ -4,10 +4,14 @@
         <div class="table-top">
             <i class="material-icons">search</i>
              <input type="text" class="search-box inline" placeholder="Search List of Geckos" ng-model="searchTerm">
-                        <a href="" ng-click="showForm = !showForm" class="add-gecko-button">
+
+
+        <div class="fixed-action-buttons">
+                    <a href="" ng-click="showForm = !showForm" class="add-gecko-button">
              <i class="material-icons" title="add new gecko">add_circle_outline</i>
             </a>
         </div>
+             </div>
         <thead>
             <tr class="link--nohover">
                 <th>
