PhotoGallery mostly implemented

--- a/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
+++ b/public/views/GeckoDetailsView/GeckoDetailsViewTemplate.htm
@@ -8,4 +8,5 @@
         <events-table gecko-id="geckoDetail._id"></events-table>
         <div class="graphs">Graphs will be here</div>
     </div>
+	<photo-gallery></photo-gallery>
 </div>
