Fixed layout of add gecko form modal.

--- a/public/assets/css/base/_b-modals.less
+++ b/public/assets/css/base/_b-modals.less
@@ -2,11 +2,11 @@
     .card;
   position: fixed;
   width: 50%;
-height: 75%;
+
   top: 420px;
   left: 50%;
   margin: -25% 0 0 -25%;
-overflow-y: scroll;
+overflow-y: auto;
     z-index: 10;
 
 
