--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -20,6 +20,7 @@
     background: white;
     padding-top: 15px;
     border-bottom: 1px solid @dividerColor;
+    height: 78vh;
 }
 
 .gecko-card tr {
