--- a/public/assets/css/modules/_metrics.less
+++ b/public/assets/css/modules/_metrics.less
@@ -4,7 +4,7 @@
     background: white;
     border-bottom: 1px solid @dividerColor;
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	padding: 15px;
 
 	color: #00c000;
