Removed divider between metrics.

--- a/public/assets/css/base/_b-base.less
+++ b/public/assets/css/base/_b-base.less
@@ -35,7 +35,7 @@ button, .button-primary {
 }
 
 body {
-    background: url("../img/subtle_dots.png"), white;
+    background: white;
     background-repeat: repeat;
     font-family: "Roboto", sans-serif;
     margin: 0;
