--- a/public/assets/css/modules/_gecko.less
+++ b/public/assets/css/modules/_gecko.less
@@ -30,6 +30,14 @@
     background: @lightPrimaryColor;
 }
 
+.gecko-card th:nth-of-type(1){
+    width: 50px;
+}
+
+.gecko-card th:nth-of-type(5){
+    width: 300px;
+}
+
 /* Search box on Gecko List */
 .search-box {
 
