Modifed Detail View to vertical layout.

--- a/public/assets/css/layout/_l-layout.less
+++ b/public/assets/css/layout/_l-layout.less
@@ -18,24 +18,18 @@
     flex-direction: column;
 }
 
-.detail-main-container{
-    display: flex;
-    align-items: stretch;
-    height: 200px;
-}
+
 .gecko-detail-card {
     border-bottom: 1px solid @dividerColor;
 }
 
-.flex-events, .graphs {
-    background: white;
-    border-bottom: 1px solid @dividerColor;
-    border-right: 1px solid @dividerColor;
-    flex: 1 1 300px;
-    height: 450px;
-}
 
 .collaspe-gecko-detail {
     height: 50px;
     overflow: hidden;
+}
+
+.graphs {
+    background: @dividerColor;
+    height: 200px;
 }
