--- a/public/assets/css/index.css
+++ b/public/assets/css/index.css
@@ -705,25 +705,16 @@ label {
   display: flex;
   flex-direction: column;
 }
-.detail-main-container {
-  display: flex;
-  align-items: stretch;
-  height: 200px;
-}
 .gecko-detail-card {
   border-bottom: 1px solid #bdbdbd;
-}
-.flex-events,
-.graphs {
-  background: white;
-  border-bottom: 1px solid #bdbdbd;
-  border-right: 1px solid #bdbdbd;
-  flex: 1 1 300px;
-  height: 450px;
 }
 .collaspe-gecko-detail {
   height: 50px;
   overflow: hidden;
+}
+.graphs {
+  background: #bdbdbd;
+  height: 200px;
 }
 /*!
  *  Font Awesome 4.6.3 by @davegandy - http://fontawesome.io - @fontawesome
